--- a/scss/_variables/_colors.scss
+++ b/scss/_variables/_colors.scss
@@ -4,6 +4,7 @@ $color-secondary: #fff;
 $color-terciary: #3d3d3d;
 
 // colores de botones
-$btn-primary: #2DF2CF;
+// $btn-primary: #2DF2CF;
+$btn-primary: #00ce61;
 $btn-secondary: #35FD91;
 $btn-terciary: #0FF67A;
