--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,10 @@
 @import "_variables/z-index";
 @import "_variables/colors";
 @import "_base/base";
+@import "_mixins/devices";
+@import "_components/buttons";
 @import "_partials/header";
+@import "_partials/banner";
+@import "_partials/about";
+@import "_partials/portfolio";
+@import "_partials/contact";
