--- a/scss/_mixins/_devices.scss
+++ b/scss/_mixins/_devices.scss
@@ -11,7 +11,7 @@ $x-large:   1440px;
 }
 
 @mixin regular {
-  @media screen and (max-width: $small) {
+  @media screen and (max-width: $regular) {
     @content;
   }
 }
