--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -33,21 +33,39 @@
 
 .menu-mobile {
   display: none;
+  .close-image {
+    position: absolute;
+    top: 5%;
+    left: 46%;
+    width: 50px;
+    cursor: pointer;
+    transition: all .3s ease-out;
+
+    &:hover {
+      transform: scale(1.3);
+      transition: all .3s ease-in;
+    }
+  }
   
   @include medium {
+    width: 100%;
+    height: 4rem;
+    position: fixed;
     display: flex;
     justify-content: flex-end;
-    margin-right: 4rem;
-    height: 1.55rem;
+    padding-right: 4rem;
     align-content: center;
-    margin-top: 1.5rem;
+    padding-top: 1rem;
+    top: 0;
     
     .burger-menu {
       width: 2rem;
+      height: 2rem;
       border-radius: .1rem;
-      background: linear-gradient(#24e4dc 20%, transparent 20%,
-      transparent 40%,#24e4dc 40%, #24e4dc 60%, transparent 60%,
-      transparent 80%,#24e4dc 80%, #24e4dc 100%);
+      // #24e4dc
+      background: linear-gradient(#68D2FF 20%, transparent 20%,
+      transparent 40%,#68D2FF 40%, #68D2FF 60%, transparent 60%,
+      transparent 80%,#68D2FF 80%, #68D2FF 100%);
       cursor: pointer;
     }
     a {
@@ -68,7 +86,7 @@
 
       li {
         transition: all .3s ease-out;
-        width: 50%;
+        width: 80%;
         margin: auto;
         margin-bottom: 3rem;
 
