--- a/scss/_partials/_portfolio.scss
+++ b/scss/_partials/_portfolio.scss
@@ -1,9 +1,20 @@
 .portfolio {
+  margin: 9rem 0;
    h2 {
     padding-left: 3em;
     font-size: 3rem;
     margin: 3rem 0;
-    text-shadow: -4px 2px #00b3ff;
+    text-shadow: -4px 2px #610082;
+
+    @include medium {
+      padding-left: .5em;
+    }
+    @include regular {
+      padding-left: 1.5em;
+    }
+    @include small {
+      padding-left: .4em;
+    }
   }
 
   .card__container {
@@ -21,6 +32,10 @@
     border-radius: 15px;
     background-color: #fff;
     box-shadow: 0px 0px 13px -1px #2d2d2d;
+
+    @include small {
+      margin: 0 .5rem;
+    }
 
     &__image {
       width: 100%;
