--- a/scss/_partials/_banner.scss
+++ b/scss/_partials/_banner.scss
@@ -18,7 +18,7 @@ main {
     flex-wrap: wrap;
 
     @include large {
-      width: 55%;
+      width: 50%;
     }
     @include medium {
       width: 100%;
@@ -26,31 +26,31 @@ main {
     
   }
   &__photo {
-    background-image: url('../images/blob-white.svg');
-    width: 44%;
+    background-image: url('../images/blob-color.png');
+    width: 35%;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     align-content: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 9em 0px;
+    padding: 3em 0px;
 
     @include large {
-      width: 60%;
+      width: 45%;
     }
     @include medium {
-      width: 60%;
+      width: 75%;
       margin: auto;
       background-size: contain;
     }
 
     img {
-      width: 56%;
+      width: 90%;
 
       @include medium {
-        width: 86%;
+        width: 73%;
       }
     }
 
