--- a/scss/_partials/_portfolio.scss
+++ b/scss/_partials/_portfolio.scss
@@ -60,7 +60,7 @@
     &__copy {
       font-family: 'Raleway', sans-serif, serif;
       line-height: 1.7;
-      font-size: .8rem;
+      font-size: 1rem;
       margin: .5rem 0;
       color: $color-terciary;
     }
