--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,7 @@
 @import "_variables/z-index";
 @import "_variables/colors";
 @import "_base/base";
+@import "_components/effects";
 @import "_mixins/devices";
 @import "_components/buttons";
 @import "_partials/header";
