--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -34,10 +34,12 @@
 
 .menu-mobile {
   display: none;
+  z-index: $z-modal;
+
   .close-image {
     position: absolute;
     top: 5%;
-    left: 46%;
+    left: 43%;
     width: 50px;
     cursor: pointer;
     transition: all .3s ease-out;
@@ -79,7 +81,7 @@
       height: 100vh;
       background-color: rgb(0, 132, 255);
       text-align: center;
-      top: -100vh;
+      // top: -250vh;
       
       ul {
         margin: 30% 0;
