--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -81,7 +81,7 @@
       height: 100vh;
       background-color: rgb(0, 132, 255);
       text-align: center;
-      // top: -250vh;
+      top: -200vh;
       
       ul {
         margin: 30% 0;
