--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -10,7 +10,7 @@
     justify-content: flex-end;
     align-items: center;
     padding: 0 5em;
-    
+
     &__list {
       display: flex;
     }
@@ -82,6 +82,7 @@
       background-color: rgb(0, 132, 255);
       text-align: center;
       top: -200vh;
+      overflow-y: scroll;
       
       ul {
         margin: 30% 0;
