Se puso un overflowY en js ya que el de css no da en el menu movil

--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -82,7 +82,7 @@
       background-color: rgb(0, 132, 255);
       text-align: center;
       top: -200vh;
-      overflow-y: scroll;
+      // overflow-y: scroll;
       
       ul {
         margin: 30% 0;
