--- a/scss/_partials/_about.scss
+++ b/scss/_partials/_about.scss
@@ -43,7 +43,8 @@
         width: 30%;
       }
       @include small {
-        width: 45%;
+        width: 55%;
+        height: auto;
       }
     }
 
