--- a/scss/_partials/_about.scss
+++ b/scss/_partials/_about.scss
@@ -24,7 +24,7 @@
     img {
       border-radius: 50%;
       width: 20%;
-      height: auto;
+      height: 20%;
       margin-top: 1rem;
       margin-bottom: 2rem;
       margin-left: 3rem;
