--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 *::after {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 html {
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  /* background-color: #006bff; */
+  background-color: #006bff;
   color: #fff;
 }
 
@@ -182,7 +182,7 @@ a {
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: #0084ff;
+    background-color: rgb(0, 132, 255);
     text-align: center;
     top: -200vh;
   }
@@ -198,7 +198,7 @@ a {
   .menu-mobile .main-menu li:hover {
     transition: all 0.3s ease-out;
     transform: scale(1.5);
-    text-shadow: 2px 2px #363636;
+    text-shadow: 2px 2px rgb(54, 54, 54);
   }
   .menu-mobile .main-menu a {
     font-family: "Raleway", sans-serif, serif;
@@ -529,6 +529,7 @@ main {
   display: flex;
   justify-content: center;
 }
+
 .contact {
   margin: 15rem 0;
 }
