--- a/scss/_partials/_portfolio.scss
+++ b/scss/_partials/_portfolio.scss
@@ -19,20 +19,24 @@
   }
 
   .card__container {
-    // display: flex;
-    // flex-wrap: wrap;
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 350px));
     grid-template-rows: 2;
     justify-content: center;
-    gap: 2rem;
+    gap: 2rem; */
+    // display: inline-block !important;
+    // justify-content: center;
+    // max-width: 200px;
+    // width: 100%;
+    width: 3500px;
+    display: flex;
+    flex-wrap: nowrap;
   }
   .card {
-    // max-width: 400px;
-    // border: 1px solid yellow;
     border-radius: 15px;
     background-color: #fff;
     box-shadow: 0px 0px 13px -1px #2d2d2d;
+    margin: 0 2rem;
 
     @include small {
       margin: 0 .5rem;
@@ -69,7 +73,44 @@
     &__actions {
       padding-bottom: 1.3em;
       display: flex;
-      justify-content: center;
+      justify-content: space-evenly;
+
+      a {
+        width: 150px;
+        text-align: center;
+        font-size: 1rem;
+      }
     }
+  }
+
+
+
+.contenedor-slider {
+  width: 100%;
+  // background: #f3f4fa;
+  padding: 54px 0;
+  /*ponemos relative para que los iconos de flechas las podamos mover relativas a su padre*/
+  position: relative;
+  overflow: hidden; /*nos oculta el espacio del scroll que se crea por el tamaño de las imgs*/
+}
+.contenedor-slider .btn-anterior, .contenedor-slider  .btn-siguiente {
+    display: inline-block;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .contenedor-slider .btn-anterior {
+    left: 2%;
+  }
+  .contenedor-slider .btn-siguiente {
+    right: 2%;
+  }
+  .contenedor-slider .btn-anterior i, .contenedor-slider .btn-siguiente i {
+    color: #000000;
+    font-size: 1.3rem;
+  }
+  .btn-anterior i:hover,  .btn-siguiente i:hover {
+    color: #0089E0;
   }
 }
